--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="main.js" defer></script>
 </head>
 <body>
-  <button class="createGridBtn" onclick="createGrid(cellPerSide)">Create Grid</button>
+  <button class="createGridBtn" onclick="createGrid()">Create Grid</button>
   <div class="container" ></div>
 </body>
 </html>
